2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/
	createDataBuffer, getSampleSize.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7107.
	* gnu/testlet/javax/swing/DefaultBoundedRangeModel/
	DefaultBoundedRangeModel.java, getChangeListeners.java,
	getExtent.java, getMaximum.java, getMinimum.java,
	getValueIsAdjusting.java, getValue.java, setExtent.java,
	setMaximum.java, setMinimum.java, setRangeProperties.java,
	setValueIsAdjusting.java, setValue.java, toString.java: New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/javax/swing/event/EventListenerList/getListeners.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerCount.java,
	gnu/testlet/javax/swing/event/EventListenerList/getListenerList.java,
	gnu/testlet/javax/swing/event/EventListenerList/toString.java:
	New tests.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7105.
	* gnu/testlet/javax/swing/event/EventListenerList/remove.java: New
	test, passes with JDK 1.4.1_01 but not with Classpath.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7104.
	* gnu/testlet/javax/swing/event/EventListenerList/add.java: New test,
	passes with JDK 1.4.1_01 but not with Classpath.

2004-01-03  Per Bothner  <per@bothner.com>

	* gnu/testlet/java/util/Date/parse.java (parse): New testcases
	for Date.parse.

2003-12-30  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/net/URL/URLTest.java: Fixed. Now it
	passes with JDK 1.4.2.

2003-12-28  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/io/LineNumberReader/Test2.java:
	New testcases for LineNumberReader (stress tests).

2003-12-27  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/net/URLConnection/Http.java:
	New really slightly improved HTTP connection testcase. We really check
	the presence of the null header in URLConnection.

2003-12-27  Guilhem Lavaux <guilhem@kaffe.org>
